chore: add attachments module
